@@ -7,6 +7,7 @@ v0.4 (not yet released)
 - upgrade to jQuery 1.12.0
 - [trends] issue buildtimetrend/python-lib#38 : Add 'days without fail' metric
 - [trends,stats] issue buildtimetrend/python-dashboard#3 : Show spinner when charts are being updated
+- issue buildtimetrend/python-lib#146 : improve constructing badgeUrl
 
 v0.3 (released on 16Nov2015)
 - issue buildtimetrend/python-lib#21 : add charts with build job results
